# sql-backup

./: .gitignore  CLAUDE.md  README.md  code_analysis_rules.json  pyproject.toml  sqlbackup.bat
src/sqlbackup/: __init__.py  backup.py  cli.py  config.py  connection.py  constants.py  copy.py  exceptions.py  push.py
tests/: conftest.py  test_backup.py  test_cli.py  test_config.py  test_connection.py  test_copy.py  test_push.py
tools/: analyze_code.bat  analyze_code_config.example.bat  fix_ruff_issues.bat  fix_ruff_issues_dry_run.bat
