[project]
name = "sqlbackup"
version = "0.1.0"
description = "CLI tool to backup and restore MySQL/MariaDB databases"
requires-python = ">=3.11"
dependencies = [
    "pymysql>=1.1.2",
]

[project.scripts]
sqlbackup = "sqlbackup.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlbackup"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyMySQL>=1.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
